# Biudzetas

./: pyproject.toml
biudzetas/: main.py
biudzetas/Modules/: __init__.py  budget.py
biudzetas_1/: main.py
biudzetas_1/Modules/: __init__.py  budget.py  entry.py
