[tool.poetry]
name = "biudzetas_1"
version = "0.1.0"
description = ""
authors = ["Your Name <gytis.bendikas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ernestas-biudzetas = "^0.1.0"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
